# rust-study

./: .gitignore  Cargo.toml  README.md
codewars/reverse-string/src/: main.rs
rust-book/cap02-jogo-adivinhacao/: Cargo.toml
rust-book/cap02-jogo-adivinhacao/examples/: 01-ler-palpite.rs  02-numero-secreto.rs  03-comparar-palpite.rs  04-laco-de-repeticao.rs  05-encerrar-ao-acertar.rs
